// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CDS Plugin GET App Config 1`] = `
{
  "bootstrapPlugins": {},
  "services": {
    "ClientSideTargetResolution": {
      "adapter": {
        "config": {
          "inbounds": {
            "scheduling.monitoring.job-Job-monitor": {
              "action": "monitor",
              "resolutionResult": {
                "additionalInformation": "SAPUI5.Component=scheduling.monitoring.job",
                "applicationType": "SAPUI5",
                "url": "/scheduling.monitoring.job/webapp",
              },
              "semanticObject": "Job",
              "signature": {
                "additionalParameters": "allowed",
                "parameters": {},
              },
              "title": "Monitor Scheduling Jobs",
            },
          },
        },
      },
    },
    "LaunchPage": {
      "adapter": {
        "config": {
          "catalogs": [],
          "groups": [
            {
              "id": "Home",
              "isGroupLocked": false,
              "isPreset": true,
              "isVisible": true,
              "tiles": [
                {
                  "id": "scheduling.monitoring.job-Job-monitor",
                  "properties": {
                    "targetURL": "#Job-monitor",
                    "title": "Monitor Scheduling Jobs",
                  },
                  "serviceRefreshInterval": 10000,
                  "tileType": "sap.ushell.ui.tile.StaticTile",
                },
              ],
              "title": "Home",
            },
          ],
        },
      },
    },
    "NavTargetResolution": {
      "config": {
        "enableClientSideTargetResolution": true,
      },
    },
  },
}
`;

exports[`CDS Plugin GET Feature Toggles 1`] = `
{
  "eventQueue/active": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
    },
    "fallbackValue": true,
  },
  "eventQueue/instanceLoadLimit": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 100,
  },
}
`;

exports[`CDS Plugin POST Feature Toggles (remove) 1`] = `
{
  "eventQueue/active": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
    },
    "fallbackValue": true,
  },
  "eventQueue/instanceLoadLimit": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 100,
  },
}
`;

exports[`CDS Plugin POST Feature Toggles 1`] = `
{
  "eventQueue/active": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
    },
    "fallbackValue": true,
    "rootValue": false,
  },
  "eventQueue/instanceLoadLimit": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 100,
    "rootValue": 11,
  },
}
`;
